--- a/TripWithMe/res/layout/activity_main.xml
+++ b/TripWithMe/res/layout/activity_main.xml
@@ -1,173 +1,308 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical"
-    android:weightSum="13" >
+    android:id="@+id/dl_activity_main_drawer"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity" >
 
-    <!-- 메뉴표시줄 -->
-
-    <RelativeLayout
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:background="@color/mainBarBgColor"
-        android:orientation="horizontal" >
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:weightSum="13" >
 
-        <Button
-            android:id="@+id/main_btn_popup_menu"
-            android:layout_width="35dp"
-            android:layout_height="28dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="7dp"
-            android:layout_marginStart="7dp"
-            android:background="@drawable/main_btn_popup_menu" />
-
-        <Button
-            android:id="@+id/main_btn_logo"
-            android:layout_width="170dp"
-            android:layout_height="20dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/main_btn_logo"
-            android:scaleType="centerCrop" />
-
-        <Button
-            android:id="@+id/main_btn_mypage"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@drawable/main_btn_mypage" />
-
-        <Button
-            android:id="@+id/main_btn_write_contents"
-            android:layout_width="26dp"
-            android:layout_height="26dp"
-            android:layout_centerVertical="true"
-            android:layout_marginEnd="12dp"
-            android:layout_marginRight="12dp"
-            android:layout_toLeftOf="@id/main_btn_mypage"
-            android:layout_toStartOf="@id/main_btn_mypage"
-            android:background="@drawable/main_btn_write_contents" />
-    </RelativeLayout>
-    <!-- 검색창과 큰 그림 -->
-
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="4"
-        android:background="@drawable/brazil"
-        android:orientation="horizontal" >
-
-        <!-- 검색창 -->
+        <!-- 메뉴표시줄 -->
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="35dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="7dp"
-            android:layout_marginEnd="7dp"
-            android:layout_marginStart="7dp"
-            android:background="@drawable/main_editbox_search"
+            android:layout_height="0dp"
+            android:layout_weight="0.7"
+            android:background="@color/mainBarBgColor"
             android:orientation="horizontal" >
 
-            <Spinner
-                android:id="@+id/user_sel_spinner"
-                android:layout_width="90dp"
-                android:layout_height="fill_parent"
-                android:layout_marginBottom="0dp"
-                android:layout_marginLeft="2dp"
-                android:layout_marginStart="2dp"
-                android:layout_marginTop="0dp"
-                android:drawSelectorOnTop="true"
-                android:entries="@array/user_sel_spinner" />
+            <Button
+                android:id="@+id/main_btn_popup_menu"
+                android:layout_width="35dp"
+                android:layout_height="28dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"
+                android:layout_marginStart="7dp"
+                android:background="@drawable/main_btn_popup_menu" />
 
             <Button
-                android:id="@+id/calender"
-                android:layout_width="20dp"
+                android:id="@+id/main_btn_logo"
+                android:layout_width="170dp"
                 android:layout_height="20dp"
+                android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="12dp"
-                android:layout_marginStart="12dp"
-                android:layout_toEndOf="@id/user_sel_spinner"
-                android:layout_toRightOf="@id/user_sel_spinner"
-                android:background="@drawable/main_btn_calendar" />
-
-            <EditText
-                android:id="@+id/searchText"
-                android:layout_width="440dp"
-                android:layout_height="fill_parent"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="12dp"
-                android:layout_marginStart="12dp"
-                android:layout_marginBottom="0.5dp"
-                android:layout_marginTop="0.5dp"
-                android:layout_toEndOf="@id/calender"
-                android:layout_toRightOf="@id/calender"
-                android:hint="@string/search_helper"
-                android:textSize="9sp" />
+                android:background="@drawable/main_btn_logo"
+                android:scaleType="centerCrop" />
 
             <Button
-                android:id="@+id/main_btn_search"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
+                android:id="@+id/main_btn_mypage"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/main_btn_mypage" />
+
+            <Button
+                android:id="@+id/main_btn_write_contents"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_centerVertical="true"
                 android:layout_marginEnd="12dp"
                 android:layout_marginRight="12dp"
-                android:background="@drawable/main_btn_search" />
+                android:layout_toLeftOf="@id/main_btn_mypage"
+                android:layout_toStartOf="@id/main_btn_mypage"
+                android:background="@drawable/main_btn_write_contents" />
         </RelativeLayout>
-    </RelativeLayout>
-    <!-- 트립위드미 추천 -->
+        <!-- 검색창과 큰 그림 -->
 
-    <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
-        android:orientation="vertical"
-        android:weightSum="11" >
-
-        <Button
-            android:id="@+id/main_label_recommend"
+        <RelativeLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@drawable/main_label_recommend" />
+            android:layout_weight="4.3"
+            android:background="@drawable/brazil"
+            android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/recommendTop"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="5"
-            android:background="@drawable/main_sample_recommend1" />
+            <!-- 검색창 -->
+
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="39dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="12dp"
+                android:layout_marginEnd="7dp"
+                android:layout_marginStart="7dp"
+                android:background="@drawable/main_editbox_search"
+                android:orientation="horizontal" >
+
+                <Spinner
+                    android:id="@+id/user_sel_spinner"
+                    android:layout_width="80dp"
+                    android:layout_height="fill_parent"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginLeft="2dp"
+                    android:layout_marginStart="2dp"
+                    android:layout_marginTop="0dp"
+                    android:drawSelectorOnTop="true"
+                    android:entries="@array/user_sel_spinner" />
+
+                <Button
+                    android:id="@+id/calender"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_toEndOf="@id/user_sel_spinner"
+                    android:layout_toRightOf="@id/user_sel_spinner"
+                    android:background="@drawable/main_btn_calendar" />
+
+                <EditText
+                    android:id="@+id/searchText"
+                    android:layout_width="440dp"
+                    android:layout_height="fill_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_marginBottom="0.5dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="0.5dp"
+                    android:layout_toEndOf="@id/calender"
+                    android:layout_toRightOf="@id/calender"
+                    android:hint="@string/search_helper"
+                    android:textSize="14sp" />
+
+                <Button
+                    android:id="@+id/main_btn_search"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="12dp"
+                    android:layout_marginRight="12dp"
+                    android:background="@drawable/main_btn_search" />
+            </RelativeLayout>
+        </RelativeLayout>
+        <!-- 트립위드미 추천 -->
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="5"
-            android:orientation="horizontal"
-            android:weightSum="2" >
+            android:layout_weight="8"
+            android:orientation="vertical"
+            android:weightSum="11" >
 
             <Button
-                android:id="@+id/recommendLeft"
+                android:id="@+id/main_label_recommend"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:background="@drawable/main_sample_recommend2" />
+                android:background="@drawable/main_label_recommend" />
 
             <Button
-                android:id="@+id/recommendRight"
+                android:id="@+id/recommendTop"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_weight="1"
-                android:background="@drawable/main_sample_recommend3" />
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:background="@drawable/main_sample_recommend1" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="0dp"
+                android:layout_weight="5"
+                android:orientation="horizontal"
+                android:weightSum="2" >
+
+                <Button
+                    android:id="@+id/recommendLeft"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/main_sample_recommend2" />
+
+                <Button
+                    android:id="@+id/recommendRight"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/main_sample_recommend3" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
-</LinearLayout>
-<!-- </FrameLayout> -->
+    <!-- 네비게이션바 -->
+
+    <LinearLayout
+        android:id="@+id/aaa"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#FFFFFF"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            
+            <ImageView
+				 android:id="@+id/drawer_picture"
+				 android:layout_width="wrap_content" 
+				 android:layout_height="wrap_content" 
+				 android:src="@drawable/drawer_picture"
+				 android:layout_marginTop="15dp"
+				 android:maxWidth="300dp"
+				 android:maxHeight="300dp" />
+            
+        </LinearLayout>
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_recommend"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content" 
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_recommend"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp" />
+            
+            
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_real"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content"
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_real"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
+            
+            
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_talk"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content" 
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_talk"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp" />
+            
+            
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_config"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content" 
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_config"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
+            
+            
+        </RelativeLayout>
+        
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
