--- a/TripWithMe/res/layout/activity_profile.xml
+++ b/TripWithMe/res/layout/activity_profile.xml
@@ -1,16 +1,262 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/dl_activity_main_drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.tripwithme.ProfileActivity" >
+    tools:context=".ProfileActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+   <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:weightSum="13" >
 
-</RelativeLayout>
+        <!-- 메뉴표시줄 -->
+        
+       <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.7"
+            android:background="@color/mainBarBgColor"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/main_btn_popup_menu"
+                android:layout_width="35dp"
+                android:layout_height="28dp"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="7dp"
+                android:layout_marginStart="7dp"
+                android:background="@drawable/main_btn_popup_menu" />
+
+            <Button
+                android:id="@+id/main_btn_logo"
+                android:layout_width="170dp"
+                android:layout_height="20dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@drawable/main_btn_logo"
+                android:scaleType="centerCrop" />
+
+            <Button
+                android:id="@+id/main_btn_mypage"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/main_btn_mypage" />
+
+            <Button
+                android:id="@+id/main_btn_write_contents"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="12dp"
+                android:layout_marginRight="12dp"
+                android:layout_toLeftOf="@id/main_btn_mypage"
+                android:layout_toStartOf="@id/main_btn_mypage"
+                android:background="@drawable/main_btn_write_contents" />
+        </RelativeLayout>
+        
+        <LinearLayout
+            android:id="@+id/profile_toggle0"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="11.2"
+            android:orientation="vertical" >
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="9dp"
+                android:gravity="center"
+                android:text="not exist your Profile" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/profile_toggle1"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="11.2"
+            android:orientation="vertical" >
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="9dp"
+                android:gravity="center"
+                android:text="@string/profile_index0" />
+
+        </LinearLayout>
+        
+        <LinearLayout
+            android:id="@+id/profile_toggle2"
+            android:visibility="invisible"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="11.2"
+            android:orientation="vertical" >
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="9dp"
+                android:gravity="center"
+                android:text="if you want" />
+
+        </LinearLayout>
+        
+        <Button
+            android:id="@+id/profileBtn"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1.1"
+            android:background="@color/mainBarBgColor"
+            android:text="@string/profile_toggle1"
+            android:textColor="#ffffff"
+            android:textStyle="bold"
+            android:textSize="23sp"/>
+
+        
+
+    </LinearLayout>
+
+    <!-- 네비게이션바 -->
+
+    <LinearLayout
+        android:id="@+id/aaa"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="#FFFFFF"
+        android:orientation="vertical" >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            
+            <ImageView
+				 android:id="@+id/drawer_picture"
+				 android:layout_width="wrap_content" 
+				 android:layout_height="wrap_content" 
+				 android:src="@drawable/drawer_picture"
+				 android:layout_marginTop="15dp"
+				 android:maxWidth="300dp"
+				 android:maxHeight="300dp" />
+            
+        </LinearLayout>
+        
+        
+        
+        
+        
+        
+        
+        
+        
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_recommend"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content" 
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_recommend"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp" />
+            
+            
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_real"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content"
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_real"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
+            
+            
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_talk"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content" 
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_talk"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="16dp"
+                    android:layout_marginStart="16dp" />
+            
+            
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="start"
+            android:background="#FFFFFF"
+            android:orientation="horizontal" >
+
+            <ImageView
+				 android:id="@+id/drawer_config"
+				 android:adjustViewBounds = "true"
+				 android:layout_alignParentLeft = "true"
+				 android:layout_alignParentStart = "true"
+				 android:layout_height="wrap_content" 
+				 android:layout_width="wrap_content"
+				 android:src="@drawable/drawer_config"
+				 android:layout_marginTop="24dp"
+				 android:layout_marginBottom="24dp"
+				 android:layout_marginLeft="24dp"
+                    android:layout_marginStart="24dp" />
+            
+            
+        </RelativeLayout>
+        
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
