--- a/TripWithMe/res/layout/activity_profile.xml
+++ b/TripWithMe/res/layout/activity_profile.xml
@@ -143,7 +143,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1.1"
                 android:background="@color/mainBarBgColor"
-                android:text="@string/profile_toggle1"
+                android:text="@string/profile_layout_btn0"
                 android:textColor="#ffffff"
                 android:textSize="23sp"
                 android:textStyle="bold" />
