--- a/TripWithMe/res/layout/activity_profile.xml
+++ b/TripWithMe/res/layout/activity_profile.xml
@@ -161,7 +161,7 @@
 
         <LinearLayout
             android:id="@+id/aaa"
-            android:layout_width="300dp"
+            android:layout_width="160dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:background="#FFFFFF"
@@ -169,102 +169,99 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="300dp"
+                android:layout_height="160dp"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
 
                 <ImageView
                     android:id="@+id/drawer_picture"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"
-                    android:maxHeight="300dp"
-                    android:maxWidth="300dp"
-                    android:src="@drawable/drawer_picture" />
+                    android:maxHeight="160dp"
+                    android:maxWidth="160dp"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/drawer_picture"
+                    />
             </LinearLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
 
                 <ImageView
                     android:id="@+id/drawer_recommend"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="24dp"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/drawer_recommend" />
+                    android:src="@drawable/drawer_recommend"
+                    />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
 
                 <ImageView
                     android:id="@+id/drawer_real"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="24dp"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/drawer_real" />
+                    android:src="@drawable/drawer_real"
+                    />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
 
                 <ImageView
                     android:id="@+id/drawer_talk"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="24dp"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/drawer_talk" />
+                    android:src="@drawable/drawer_talk"
+                    />
             </RelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="90dp"
+                android:layout_height="70dp"
                 android:layout_gravity="start"
                 android:background="#FFFFFF"
                 android:orientation="horizontal" >
 
                 <ImageView
                     android:id="@+id/drawer_config"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginBottom="24dp"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginStart="24dp"
-                    android:layout_marginTop="24dp"
+                    android:maxHeight="70dp"
+                    android:maxWidth="160dp"
                     android:adjustViewBounds="true"
-                    android:src="@drawable/drawer_config" />
+                    android:src="@drawable/drawer_config"
+                    />
             </RelativeLayout>
         </LinearLayout>
     </android.support.v4.widget.DrawerLayout>
